--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.3'
 services:
   mysql:
     image: mysql:8.0.27
+    platform: linux/amd64
     command: "mysqld --character-set-server=utf8"
     environment:
       MYSQL_ROOT_PASSWORD: local
